Fix MainFrame metrics recording call sites

WebFrameWidgetImpl was missing a call to record metrics, resulting in OOPIF not
recording main frame metrics for their update. And the SingleThreadProxy was
not recording metrics at all, which causes crashes with an upcoming patch.

R=pdr@chromium.org
BUG=902434

Change-Id: I96e4666d098ef22c2b5aec74851470319dd133f5
Reviewed-on: https://chromium-review.googlesource.com/c/1320691
Reviewed-by: Philip Rogers <pdr@chromium.org>
Reviewed-by: danakj <danakj@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Stephen Chenney <schenney@chromium.org>
Cr-Commit-Position: refs/heads/master@{#606575}
Former-commit-id: b508a247814ad7a8adb9dc4ab557a733ce03c2d6